[package]
name = "hk32f0301mxxc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
nb = "1.1.0"
embedded-hal-nb = "1.0.0"
defmt = "0.3.5"
serial-log = { version = "0.1.0", path = "../serial-log", features = ["defmt-log", "device-hk32f0301mxxc-uart1"] }

hal = { package = "hk32f0301mxxc-hal", version = "0.1.0", path = "../hk32f0301mxxc-hal"}


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[build-dependencies]
bindgen = "0.69.1"

